--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,9 @@
   --glass-input: rgba(109, 80, 95, 0.719);
   --glass-bg: rgba(255, 255, 255, 0.452);
 
+  --bg-color: #bbcbd6;
+  --main-nav: rgb(50, 50, 61);
+
   --section-title: #ffbb00;
   --footer-bg: #000;
   --footer-color: rgb(218, 216, 216);
