--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,14 +1,67 @@
 .main-nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 110%;
     -webkit-box-shadow: 10px 8px 20px rgba(21, 22, 36, 0.3);
     -moz-box-shadow: 10px 8px 20px rgba(21, 22, 36, 0.3);
     box-shadow: 10px 8px 20px rgba(21, 22, 36, 0.3);
     background-color: var(--main-nav);
     z-index: 1;
+    color: #fff;
+    padding: 30px 0 10px 0;
+    box-sizing: border-box;
 }
 .app-bar{
     width: 100%;
     background: #fff;
     height: 45px;
     box-sizing: border-box;
+}
+.logo-wrap {
+    width: 170px;
+    height: 170px;
+    border-radius: 50%;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0px auto;
+}
+.logo-label1, .logo-label2{
+    color: var(--main-nav);
+    font-size: 3rem;
+    width: 100%;
+    box-sizing: border-box;
+    padding-left: 32px;
+    line-height: 22px;
+}
+.logo-label1{
+    font-weight: bold;
+}
+.nav-link, .nav-footer{
+    color: rgb(179, 179, 179);
+}
+.nav-links, .nav-link{
+    width: 100%;
+    text-align: right;
+    box-sizing: border-box;
+}
+.nav-link{
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 1.5rem;
+    border-bottom: 1px solid transparent;
+    &:hover{
+        background: rgb(26, 24, 34);
+        border-bottom: 1px solid #fff;
+    }
+}
+.nav-footer{
+    padding: 5px;
+    box-sizing: border-box;
+    text-align: center;
+    font-style: italic;
+    color: #777;
 }
