--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -49,6 +49,7 @@
     box-sizing: border-box;
 }
 .nav-link{
+    display: block;
     padding: 5px 10px;
     cursor: pointer;
     font-size: 1.5rem;
