--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   background: var(--bg-color);
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   padding: 40px;
   box-sizing: border-box;
   display: grid;
@@ -25,7 +26,11 @@
   width: calc(100% - 30px);
   height: calc(100% - 65px);
   padding: 10px 10px 10px 20px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
+}
+.tbl{
+  overflow-y: scroll;
+  max-height: calc(100vh - 400px);
 }
 
 .nice-scroll::-webkit-scrollbar-track {
