--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,4 +1,6 @@
 .nav-outer{
+    display: flex;
+    justify-content: center;
     width: 110%;
     -webkit-box-shadow: 10px 8px 20px rgba(21, 22, 36, 0.3);
     -moz-box-shadow: 10px 8px 20px rgba(21, 22, 36, 0.3);
