--- a/src/index.scss
+++ b/src/index.scss
@@ -47,6 +47,7 @@
   --color-orange-lite: rgba(255, 173, 48, 0.1);
   --main-bg-color: var(--bg-grey-light);
   --shadow-color: rgba(148, 148, 148, 0.25);
+  --modal-shadow-color: rgba(0, 0, 0, 0.43);
 
   --primary-button-color: #1f7fff;
     --primary-button-hover-state: #3fa9f5;
