--- a/src/App.scss
+++ b/src/App.scss
@@ -436,13 +436,21 @@ form{
 
 .modal-content {
   box-sizing: border-box;
-  &:first-child{
-    padding-top: 20px;
-  }
+  font-size: 1.4rem;
 }
 .flex-modal-content{
   display: flex;
   justify-content: space-between;
+}
+.modal-item-key-fake{
+  width: 120px;
+  background: #eee;
+  margin-right: 4px;
+  padding: 15px 10px;
+}
+.modal-item-val-fake{
+  width: 100%;
+  padding: 15px 10px;
 }
 .modal-item-key{
   width: 120px;
